# cadiotheka

./: .gitignore  AGENTS.md  API.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  README.md  SECURITY.md  TODO.md  build.rs  index.html  justfile  wrangler.jsonc
.agents/skills/add-account/: SKILL.md
.agents/skills/add-builder/: SKILL.md
.agents/skills/add-card/: SKILL.md
.agents/skills/add-component/: SKILL.md
.agents/skills/add-page/: SKILL.md
.agents/skills/add-schema/: SKILL.md
.agents/skills/add-tag-platform/: SKILL.md
.agents/skills/run-validation/: SKILL.md
.agents/skills/update-i18n/: SKILL.md
.agents/skills/validate-cards/: SKILL.md
.agents/skills/validate-data/: SKILL.md
.github/workflows/: backend.yml  enforce_pr_title.yml  frontend.yml  rust.yml
assets/: manifest.json  sw.js
cadiotheka-backend/: .gitignore  Cargo.toml  README.md  schema.sql  wrangler.toml
cadiotheka-backend/.cargo/: config.toml
cadiotheka-backend/schemas/: account_providers.sql  accounts.sql  projects.sql
cadiotheka-backend/schemas/migrations/: 001_account_providers.sql
cadiotheka-backend/scripts/: seed_accounts.sql  seed_projects.sql
cadiotheka-backend/src/: lib.rs  utils.rs
cadiotheka-backend/src/api/: accounts.rs  auth.rs  projects.rs  session.rs
cadiotheka-frontend/: Cargo.toml  Trunk.toml  _headers  build.rs  index.html
cadiotheka-frontend/locales/: en.json
cadiotheka-frontend/public/: style.css
cadiotheka-frontend/src/: app.rs  lib.rs  main.rs  utils.rs
cadiotheka-frontend/src/components/cards/: project.rs  project_card.rs
cadiotheka-frontend/src/components/sections/: footer.rs  header.rs  projects.rs
cadiotheka-frontend/src/components/ui/: corner_frame.rs  logo.rs  markdown.rs  markdown_editor.rs  overflow_row.rs  project_icon_picker.rs  toast.rs  toggle.rs
cadiotheka-frontend/src/components/ui/effects/: section_fade.rs
cadiotheka-frontend/src/components/ui/modals/: add_project.rs  login.rs  login_modal.rs  profile.rs  profile_modal.rs  project.rs  project_modal.rs  search.rs  search_modal.rs
cadiotheka-frontend/src/contexts/: accounts.rs  add_project.rs  current_user.rs  layout.rs  mod.rs  project_ctx.rs  project_list.rs  project_modal.rs  projects.rs  search.rs
cadiotheka-frontend/src/contexts/modals/: login.rs
cadiotheka-frontend/src/data/: account.rs  card.rs  fixture.rs  project.rs
cadiotheka-frontend/src/engines/: filter.rs  query.rs  suggestions.rs
cadiotheka-frontend/src/metadata/: platforms.rs  tags.rs
cadiotheka-frontend/src/utils/: color.rs  dom.rs  format.rs  url.rs
cadiotheka-frontend/test_data/: accounts.json
docs/: leptos-migration-plan.md
locales/: en.json
scripts/: convert_cards_to_sql.py
src/: app.rs  components.rs  context.rs  data.rs  github.rs  i18n.rs  lib.rs  main.rs  platforms.rs  tags.rs  theme.rs  utils.rs
src/components/: card.rs  dotted_background.rs  footer.rs  grid.rs  header.rs  hub.rs  login.rs  project_popup.rs  search_bar.rs  sort_bar.rs
src/components/builders/: keycap.rs
src/components/cards/: project_card.rs  projectcard.rs
src/components/sections/: footer.rs  header.rs  projects.rs
src/components/ui/: markdown.rs  modal.rs  overflowrow.rs  toggle.rs
src/components/ui/modals/: profile_modal.rs  project_modal.rs  projectmodal.rs  searchmodal.rs
src/contexts/: current_user.rs  profile_modal.rs
src/data/: account.rs  card.rs
src/engines/: filter.rs  mod.rs  query.rs  suggestions.rs
src/metadata/: platforms.rs
src/pages/: hub.rs  login.rs
src_legacy/: app.rs  fixture.rs  i18n.rs
src_legacy/components/: grid.rs  header.rs  project_popup.rs
src_legacy/pages/: hub.rs
test_data/: accounts.json  cards.json
