[workspace]
members = ["cadiotheka-frontend", "cadiotheka-backend"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
