[workspace]
members = ["cadiotheka-frontend", "cadiotheka-backend"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
