[package]
name = "cadiotheka-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ["d1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
