[package]
name = "cadiotheka-backend"
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8.5", features = ["d1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
base64 = "0.22"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
url = "2.5"
hex = "0.4"
oauth2 = { version = "5.0", default-features = false }
wasm-bindgen = "0.2.126"
html-escape = "0.2"
serde_qs = "0.15"
cookie = "0.18"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["getrandom"]
