[package]
name = "cadiotheka-frontend"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
leptos = { version = "0.8.17", features = ["csr"] }
leptos_i18n = { version = "0.6.2", default-features = false, features = ["csr"] }
gloo-timers = { version = "0.4.0", features = ["futures"] }
gloo-net = "0.6"
time = { version = "0.3", features = ["serde", "wasm-bindgen", "macros", "formatting", "parsing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
fuzzy-matcher = "0.3.7"
js-sys = "0.3"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
web-sys = { version = "0.3", features = ["Storage", "MediaQueryList", "Document", "Element", "DomRect", "HtmlElement", "Node", "console", "IntersectionObserver", "IntersectionObserverInit", "IntersectionObserverEntry"] }
console_error_panic_hook = "0.1.7"
urlencoding = "2.1"

[build-dependencies]
leptos_i18n_build = "0.6.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.cargo-machete]
# leptos_i18n is used at compile time by leptos_i18n_build and referenced
# through generated code, which cargo-machete cannot detect.
ignored = ["leptos_i18n"]

[lints]
workspace = true
