[package]
name = "cadiotheka-frontend"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
leptos = { version = "0.8.17", features = ["csr"] }
gloo-timers = { version = "0.4.0", features = ["futures"] }
gloo-net = "0.6"
time = { version = "0.3", features = ["serde", "wasm-bindgen", "macros", "formatting", "parsing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
fuzzy-matcher = "0.3.7"
js-sys = "0.3"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
ammonia = "4.1"
web-sys = { version = "0.3", features = ["Storage", "MediaQueryList", "Document", "Element", "DomRect", "HtmlElement", "HtmlInputElement", "Node", "NodeList", "console", "IntersectionObserver", "IntersectionObserverInit", "IntersectionObserverEntry", "File", "FileList", "Blob", "Url", "FormData", "Window", "Navigator", "Clipboard"] }
console_error_panic_hook = "0.1.7"
urlencoding = "2.1"
uuid = { version = "1.11", features = ["v4", "serde", "js"] }

[lints]
workspace = true
